Fix horizontal gap

--- a/components/toggle-button-group/src/vwc-toggle-button-group.scss
+++ b/components/toggle-button-group/src/vwc-toggle-button-group.scss
@@ -91,11 +91,12 @@ $sizes: (
 
 	:host([accent]) {
 
-		--vwc-#{$scope}-padding: 2px;
-		--vvd-#{$scope}-height: calc(#{map.get($sizes, 'default')} - 2*var(--vwc-#{$scope}-padding));
+		--vwc-#{$scope}-vertical-padding: 2px;
+		--vwc-#{$scope}-horizontal-padding: 1px;
+		--vvd-#{$scope}-height: calc(#{map.get($sizes, 'default')} - 2*var(--vwc-#{$scope}-vertical-padding));
 
 		::slotted(vwc-#{$scope}) {
-			padding: var(--vwc-#{$scope}-padding, 0);
+			padding: var(--vwc-#{$scope}-vertical-padding, 0) var(--vwc-#{$scope}-horizontal-padding, 0);
 			background-color: var(#{scheme-variables.$vvd-color-neutral-30});
 		}
 
@@ -112,11 +113,11 @@ $sizes: (
 	}
 
 	:host([accent][dense]) {
-		--vvd-#{$scope}-height: calc(#{map.get($sizes, 'dense')} - 2*var(--vwc-#{$scope}-padding));
+		--vvd-#{$scope}-height: calc(#{map.get($sizes, 'dense')} - 2*var(--vwc-#{$scope}-vertical-padding));
 	}
 
 	:host([accent][enlarged]) {
-		--vvd-#{$scope}-height: calc(#{map.get($sizes, 'enlarged')} - 2*var(--vwc-#{$scope}-padding));
+		--vvd-#{$scope}-height: calc(#{map.get($sizes, 'enlarged')} - 2*var(--vwc-#{$scope}-vertical-padding));
 	}
 
 	::slotted(vwc-#{$scope}:hover:not([selected])) {
@@ -129,11 +130,13 @@ $sizes: (
 
 	::slotted(vwc-#{$scope}:first-child:not(:last-child)) {
 		--vvd-#{$scope}-shape: var(#{$vvd-toggle-button-group-shape}) 0 0 var(#{$vvd-toggle-button-group-shape});
+		padding-left: var(--vwc-#{$scope}-vertical-padding, 0);
 		border-radius: var(#{$vvd-toggle-button-group-shape}) 0 0 var(#{$vvd-toggle-button-group-shape});
 	}
 
 	::slotted(vwc-#{$scope}:last-child:not(:first-child)) {
 		--vvd-#{$scope}-shape: 0 var(#{$vvd-toggle-button-group-shape}) var(#{$vvd-toggle-button-group-shape}) 0;
+		padding-right: var(--vwc-#{$scope}-vertical-padding, 0);
 		border-radius: 0 var(#{$vvd-toggle-button-group-shape}) var(#{$vvd-toggle-button-group-shape}) 0;
 	}
 
